[INJIWEB-1627] update the temporarily_locked error message to show it as suggested in the jira card requirements
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError": "يبدو أن رمز المرور غير صحيح. يُرجى المحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" إذا كنت بحاجة إلى مساعدة في إعادة ضبطه.",
       "fetchWalletsError": "فشل في جلب المحافظ.",
       "walletStatus": {
-        "temporarily_locked": "لقد وصلتَ إلى الحد الأقصى لعدد المحاولات. محفظتك الآن مقفلة مؤقتًا لبعض الوقت.",
+        "temporarily_locked": "لقد وصلتَ إلى الحد الأقصى لعدد المحاولات. محفظتك الآن مقفلة مؤقتًا. يُرجى المحاولة لاحقًا.",
         "permanently_locked": "تم قفل محفظتك نهائيًا بسبب عدة محاولات فاشلة. يُرجى النقر على \"نسيت كلمة المرور\" لإعادة ضبط محفظتك والمتابعة.",
         "last_attempt_before_lockout": "رمز المرور غير صحيح. آخر محاولة متبقية قبل قفل محفظتك نهائيًا."
       }
