--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError": "वह पासकोड सही नहीं लग रहा है। कृपया पुनः प्रयास करें, या यदि आपको इसे रीसेट करने में सहायता चाहिए तो 'पासकोड भूल गए' पर टैप करें",
       "fetchWalletsError": "वॉलेट लाने में त्रुटि।",
       "walletStatus": {
-        "temporarily_locked": "आप अधिकतम प्रयासों की संख्या तक पहुँच चुके हैं। आपका वॉलेट अब कुछ समय के लिए अस्थायी रूप से लॉक कर दिया गया है",
+        "temporarily_locked": "आप अधिकतम प्रयासों तक पहुँच चुके हैं। आपका वॉलेट अब अस्थायी रूप से लॉक हो गया है। कृपया बाद में पुनः प्रयास करें",
         "permanently_locked": "कई असफल प्रयासों के कारण आपका वॉलेट स्थायी रूप से लॉक कर दिया गया है। कृपया जारी रखने के लिए अपना वॉलेट रीसेट करने के लिए पासवर्ड भूल गए पर क्लिक करें",
         "last_attempt_before_lockout": "गलत पासकोड। आपका वॉलेट स्थायी रूप से लॉक होने से पहले बचा हुआ अंतिम प्रयास"
       }
