--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError": "ಆ ಪಾಸ್‌ಕೋಡ್ ಸರಿಯಾಗಿಲ್ಲ ಎಂದು ತೋರುತ್ತದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮಗೆ ಸಹಾಯ ಬೇಕಾದರೆ 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ' ಟ್ಯಾಪ್ ಮಾಡಿ.",
       "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ.",
       "walletStatus": {
-        "temporarily_locked": "ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಪ್ರಯತ್ನಗಳನ್ನು ತಲುಪಿದ್ದೀರಿ. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಈಗ ತಾತ್ಕಾಲಿಕವಾಗಿ ಸ್ವಲ್ಪ ಸಮಯದವರೆಗೆ ಲಾಕ್ ಆಗಿದೆ.",
+        "temporarily_locked": "ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಪ್ರಯತ್ನಗಳನ್ನು ತಲುಪಿದ್ದೀರಿ. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಈಗ ತಾತ್ಕಾಲಿಕವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
         "permanently_locked": "ಹಲವಾರು ವಿಫಲ ಪ್ರಯತ್ನಗಳಿಂದಾಗಿ ನಿಮ್ಮ ವಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ಮುಂದುವರಿಯಲು ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಲು ದಯವಿಟ್ಟು ಮರೆತುಹೋದ ಪಾಸ್‌ವರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ.",
         "last_attempt_before_lockout": "ತಪ್ಪಾದ ಪಾಸ್‌ಕೋಡ್. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗುವ ಮೊದಲು ಕೊನೆಯ ಪ್ರಯತ್ನ ಉಳಿದಿದೆ."
       }
