--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError": "Essa senha não parece correta. Tente novamente ou toque em \"Esqueci a senha\" se precisar de ajuda para redefini-la.",
       "fetchWalletsError": "Erro ao buscar carteiras.",
       "walletStatus": {
-        "temporarily_locked": "Você atingiu o número máximo de tentativas. Sua carteira está temporariamente bloqueada por algum tempo.",
+        "temporarily_locked": "Você atingiu o número máximo de tentativas. Sua carteira está temporariamente bloqueada. Tente novamente mais tarde.",
         "permanently_locked": "Sua carteira foi bloqueada permanentemente devido a várias tentativas frustradas. Clique em \"Esqueceu a senha?\" para redefinir sua carteira e continuar.",
         "last_attempt_before_lockout": "Senha incorreta. Última tentativa restante antes que sua carteira seja bloqueada permanentemente."
       }
