--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError": "அந்தக் கடவுக்குறியீடு சரியாகத் தெரியவில்லை. மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க உதவி தேவைப்பட்டால் ‘கடவுக்குறியீட்டை மறந்துவிட்டேன்’ என்பதைத் தட்டவும்.",
       "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது.",
       "walletStatus": {
-        "temporarily_locked": "நீங்கள் அதிகபட்ச முயற்சிகளை அடைந்துவிட்டீர்கள். உங்கள் பணப்பை இப்போது சிறிது நேரம் தற்காலிகமாக பூட்டப்பட்டுள்ளது.",
+        "temporarily_locked": "நீங்கள் அதிகபட்ச முயற்சிகளை அடைந்துவிட்டீர்கள். உங்கள் பணப்பை இப்போது தற்காலிகமாக பூட்டப்பட்டுள்ளது. தயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும்.",
         "permanently_locked": "பலமுறை முயற்சித்து தோல்வியடைந்ததால் உங்கள் பணப்பை நிரந்தரமாக பூட்டப்பட்டுள்ளது. தொடர உங்கள் பணப்பையை மீட்டமைக்க மறந்துவிட்ட கடவுச்சொல்லைக் கிளிக் செய்யவும்.",
         "last_attempt_before_lockout": "தவறான கடவுக்குறியீடு. உங்கள் பணப்பை நிரந்தரமாகப் பூட்டப்படுவதற்கு முன் கடைசி முயற்சி மீதமுள்ளது."
       }
