--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -101,7 +101,7 @@
       "incorrectPasscodeError":"That passcode doesn’t seem right. Please try again, or tap ‘Forgot Passcode’ if you need help resetting it",
       "fetchWalletsError":"Error in fetching wallets",
       "walletStatus": {
-        "temporarily_locked": "You’ve reached the maximum number of attempts. Your wallet is now temporarily locked for sometime",
+        "temporarily_locked": "You've reached the maximum number of attempts. Your wallet is now temporarily locked. Please try again later",
         "permanently_locked": "Your wallet has been permanently locked due to multiple failed attempts. Please click on forgot password to reset your wallet to continue",
         "last_attempt_before_lockout": "Incorrect passcode. Last attempt remaining before your wallet is permanently locked"
       }
