[INJIWEB-1627] update passcode page component to handle different types of error that can occur when calling backend endpoints
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -424,6 +424,29 @@
       "placeholder": "ابحث عن بطاقاتك حسب الاسم",
       "noResults": "لا توجد بطاقات تطابق بحثك."
     },
+    "cardView": {
+      "download": "تنزيل",
+      "menu": {
+        "view": "عرض",
+        "delete": "حذف"
+      },
+      "error": {
+        "downloadError": "فشل التنزيل. يرجى إعادة المحاولة.",
+        "deleteError": "فشل الحذف. حاول مرة أخرى."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "حذف البطاقة!",
+          "message": "هل أنت متأكد أنك تريد حذف هذه البطاقة؟"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "بيت",
+    "goToHome": "الذهاب إلى الصفحة الرئيسية",
+    "confirm": "تأكيد",
+    "cancel": "إلغاء",
     "error": {
       "internalServerError": {
         "title": "خطأ في الخادم",
@@ -449,29 +472,6 @@
         "title": "لا يوجد اتصال بالإنترنت",
         "message": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى."
       }
-    },
-    "cardView": {
-      "download": "تنزيل",
-      "menu": {
-        "view": "عرض",
-        "delete": "حذف"
-      },
-      "error": {
-        "downloadError": "فشل التنزيل. يرجى إعادة المحاولة.",
-        "deleteError": "فشل الحذف. حاول مرة أخرى."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "حذف البطاقة!",
-          "message": "هل أنت متأكد أنك تريد حذف هذه البطاقة؟"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "بيت",
-    "goToHome": "الذهاب إلى الصفحة الرئيسية",
-    "confirm": "تأكيد",
-    "cancel": "إلغاء"
   }
 }
