--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -424,6 +424,29 @@
       "placeholder": "உங்கள் அட்டைகளை பெயர் மூலம் தேடுங்கள்",
       "noResults": "உங்கள் தேடலுக்கு எந்த அட்டைகளும் பொருந்தவில்லை."
     },
+    "cardView": {
+      "download": "பதிவிறக்கம்",
+      "menu": {
+        "view": "காண்க",
+        "delete": "நீக்கு"
+      },
+      "error": {
+        "downloadError": "பதிவிறக்கம் தோல்வியடைந்தது. மீண்டும் முயற்சிக்கவும்.",
+        "deleteError": "நீக்குவதில் தோல்வி. மீண்டும் முயற்சிக்கவும்."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "அட்டையை நீக்கு!",
+          "message": "இந்த அட்டையை நீக்க விரும்புகிறீர்களா?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "முகப்பு",
+    "goToHome": "முகப்புக்குச் செல்க",
+    "confirm": "உறுதிப்படுத்து",
+    "cancel": "ரத்து செய்",
     "error": {
       "internalServerError": {
         "title": "சர்வர் பிழை",
@@ -449,29 +472,6 @@
         "title": "இணைய இணைப்பு இல்லை",
         "message": "உங்கள் இணைய இணைப்பை சரிபார்த்து மீண்டும் முயற்சிக்கவும்."
       }
-    },
-    "cardView": {
-      "download": "பதிவிறக்கம்",
-      "menu": {
-        "view": "காண்க",
-        "delete": "நீக்கு"
-      },
-      "error": {
-        "downloadError": "பதிவிறக்கம் தோல்வியடைந்தது. மீண்டும் முயற்சிக்கவும்.",
-        "deleteError": "நீக்குவதில் தோல்வி. மீண்டும் முயற்சிக்கவும்."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "அட்டையை நீக்கு!",
-          "message": "இந்த அட்டையை நீக்க விரும்புகிறீர்களா?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "முகப்பு",
-    "goToHome": "முகப்புக்குச் செல்க",
-    "confirm": "உறுதிப்படுத்து",
-    "cancel": "ரத்து செய்"
   }
 }
