--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -424,6 +424,29 @@
       "placeholder": "Search your cards by Name",
       "noResults": "No cards match your search."
     },
+    "cardView": {
+      "download": "Download",
+      "menu": {
+        "view": "View",
+        "delete": "Delete"
+      },
+      "error": {
+        "downloadError": "Download failed. Please retry.",
+        "deleteError": "Failed to delete. Try again."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "Delete Card!",
+          "message": "Are you sure you want to delete this card?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "Home",
+    "goToHome": "Go to Home",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
     "error": {
       "internalServerError": {
         "title": "Server Error",
@@ -449,29 +472,6 @@
         "title": "No Internet Connection",
         "message": "Please check your internet connection and try again."
       }
-    },
-    "cardView": {
-      "download": "Download",
-      "menu": {
-        "view": "View",
-        "delete": "Delete"
-      },
-      "error": {
-        "downloadError": "Download failed. Please retry.",
-        "deleteError": "Failed to delete. Try again."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "Delete Card!",
-          "message": "Are you sure you want to delete this card?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "Home",
-    "goToHome": "Go to Home",
-    "confirm": "Confirm",
-    "cancel": "Cancel"
   }
 }
