--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -424,6 +424,29 @@
       "placeholder": "नाम से अपने कार्ड खोजें",
       "noResults": "आपकी खोज से मेल खाने वाला कोई कार्ड नहीं है।"
     },
+    "cardView": {
+      "download": "डाउनलोड करें",
+      "menu": {
+        "view": "देखें",
+        "delete": "हटाएँ"
+      },
+      "error": {
+        "downloadError": "डाउनलोड विफल। कृपया पुनः प्रयास करें।",
+        "deleteError": "हटाने में विफल। पुनः प्रयास करें।"
+      },
+      "delete": {
+        "confirmation": {
+          "title": "कार्ड हटाएँ!",
+          "message": "क्या आप वाकई इस कार्ड को हटाना चाहते हैं?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "घर",
+    "goToHome": "होम पर जाएं",
+    "confirm": "पुष्टि करें",
+    "cancel": "रद्द करें",
     "error": {
       "internalServerError": {
         "title": "सर्वर त्रुटि",
@@ -449,29 +472,6 @@
         "title": "कोई इंटरनेट कनेक्शन नहीं",
         "message": "कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें।"
       }
-    },
-    "cardView": {
-      "download": "डाउनलोड करें",
-      "menu": {
-        "view": "देखें",
-        "delete": "हटाएँ"
-      },
-      "error": {
-        "downloadError": "डाउनलोड विफल। कृपया पुनः प्रयास करें।",
-        "deleteError": "हटाने में विफल। पुनः प्रयास करें।"
-      },
-      "delete": {
-        "confirmation": {
-          "title": "कार्ड हटाएँ!",
-          "message": "क्या आप वाकई इस कार्ड को हटाना चाहते हैं?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "घर",
-    "goToHome": "होम पर जाएं",
-    "confirm": "पुष्टि करें",
-    "cancel": "रद्द करें"
   }
 }
