--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -98,7 +98,7 @@
       "passcodeLengthError": "Le code PIN doit comporter 6 chiffres.",
       "passcodeMismatchError": "Les codes d'accès ne correspondent pas. Veuillez vous assurer que les deux champs du code correspondent parfaitement. Saisissez-le à nouveau et réessayez.",
       "createWalletError": "Échec de la création du portefeuille.",
-      "incorrectPasscodeError": "Ce code d'accès ne semble pas correct. Veuillez réessayer ou appuyer sur « Mot de passe oublié » si vous avez besoin d'aide pour le réinitialiser.",
+      "incorrectPasscodeError": "Le code d'accès semble incorrect. Veuillez réessayer ou appuyer sur « Mot de passe oublié » si vous avez besoin d'aide pour le réinitialiser.",
       "fetchWalletsError": "Échec du chargement des portefeuilles.",
       "walletStatus": {
         "temporarily_locked": "Vous avez atteint le nombre maximal de tentatives. Votre portefeuille est temporairement verrouillé. Veuillez réessayer ultérieurement.",
