--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -98,7 +98,7 @@
       "passcodeLengthError": "पिन 6 अंकों का होना चाहिए।",
       "passcodeMismatchError": "पासकोड मेल नहीं खाते। कृपया सुनिश्चित करें कि दोनों पासकोड फ़ील्ड बिल्कुल मेल खाते हैं। पुनः दर्ज करें और पुनः प्रयास करें।",
       "createWalletError": "वॉलेट निर्माण असफल हुआ।",
-      "incorrectPasscodeError": "वह पासकोड सही नहीं लग रहा है। कृपया पुनः प्रयास करें, या यदि आपको इसे रीसेट करने में सहायता चाहिए तो 'पासकोड भूल गए' पर टैप करें",
+      "incorrectPasscodeError": "पासकोड सही नहीं लग रहा है। कृपया पुनः प्रयास करें, या यदि आपको इसे रीसेट करने में सहायता चाहिए, तो 'पासकोड भूल गए' पर टैप करें।",
       "fetchWalletsError": "वॉलेट लाने में त्रुटि।",
       "walletStatus": {
         "temporarily_locked": "आप अधिकतम प्रयासों तक पहुँच चुके हैं। आपका वॉलेट अब अस्थायी रूप से लॉक हो गया है। कृपया बाद में पुनः प्रयास करें",
