--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -98,7 +98,7 @@
       "passcodeLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
       "passcodeMismatchError": "ಪಾಸ್‌ಕೋಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ. ಎರಡೂ ಪಾಸ್‌ಕೋಡ್ ಕ್ಷೇತ್ರಗಳು ನಿಖರವಾಗಿ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. ಮರು-ನಮೂದಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "createWalletError": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
-      "incorrectPasscodeError": "ಆ ಪಾಸ್‌ಕೋಡ್ ಸರಿಯಾಗಿಲ್ಲ ಎಂದು ತೋರುತ್ತದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮಗೆ ಸಹಾಯ ಬೇಕಾದರೆ 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ' ಟ್ಯಾಪ್ ಮಾಡಿ.",
+      "incorrectPasscodeError": "ಪಾಸ್‌ಕೋಡ್ ಸರಿಯಾಗಿಲ್ಲ ಎಂದು ತೋರುತ್ತದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮಗೆ ಸಹಾಯ ಬೇಕಾದರೆ 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ' ಟ್ಯಾಪ್ ಮಾಡಿ.",
       "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ.",
       "walletStatus": {
         "temporarily_locked": "ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಪ್ರಯತ್ನಗಳನ್ನು ತಲುಪಿದ್ದೀರಿ. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಈಗ ತಾತ್ಕಾಲಿಕವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
