--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -98,7 +98,7 @@
       "passcodeLengthError": "O PIN deve ter 6 dígitos.",
       "passcodeMismatchError": "As senhas não correspondem. Certifique-se de que ambos os campos de senha correspondam exatamente. Digite novamente e tente novamente.",
       "createWalletError": "Falha na criação da carteira.",
-      "incorrectPasscodeError": "Essa senha não parece correta. Tente novamente ou toque em \"Esqueci a senha\" se precisar de ajuda para redefini-la.",
+      "incorrectPasscodeError": "A senha não parece correta. Tente novamente ou toque em \"Esqueci a senha\" se precisar de ajuda para redefini-la.",
       "fetchWalletsError": "Erro ao buscar carteiras.",
       "walletStatus": {
         "temporarily_locked": "Você atingiu o número máximo de tentativas. Sua carteira está temporariamente bloqueada. Tente novamente mais tarde.",
