--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -98,7 +98,7 @@
       "passcodeLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
       "passcodeMismatchError": "கடவுக்குறியீடுகள் பொருந்தவில்லை. இரண்டு கடவுக்குறியீடு புலங்களும் சரியாகப் பொருந்துவதை உறுதிசெய்து கொள்ளவும். மீண்டும் உள்ளிட்டு மீண்டும் முயற்சிக்கவும்.",
       "createWalletError": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
-      "incorrectPasscodeError": "அந்தக் கடவுக்குறியீடு சரியாகத் தெரியவில்லை. மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க உதவி தேவைப்பட்டால் ‘கடவுக்குறியீட்டை மறந்துவிட்டேன்’ என்பதைத் தட்டவும்.",
+      "incorrectPasscodeError": "கடவுக்குறியீடு சரியாக இல்லை. மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க உதவி தேவைப்பட்டால் ‘கடவுக்குறியீட்டை மறந்துவிட்டேன்’ என்பதைத் தட்டவும்.",
       "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது.",
       "walletStatus": {
         "temporarily_locked": "நீங்கள் அதிகபட்ச முயற்சிகளை அடைந்துவிட்டீர்கள். உங்கள் பணப்பை இப்போது தற்காலிகமாக பூட்டப்பட்டுள்ளது. தயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும்.",
