[Injiweb 1627] handle different errors we get in retry passcode flow and show the appropriate error messages in the Passcode page (#368)
* [INJIWEB-1627] add logic to show the approriate error messages for wallet temporary lock, permanent lock, last attempt and incorrect passcode and add the translations for the same

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] update error code for last attempt left scenario and update the same in locales

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] reset and disable passcode input boxes when the wallet is locked temporarily or permanently and fix the background color of disabled button and fix the test cases for the same

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] write test cases for different wallet status flows in passcode page

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] update psscodePageTemplate snapshot test

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] remove unused theme colors

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] fix the test cases written for checking if error message is being shown and input boxes and submit button are disabled or enabled based on the wallet status recieved when unlocking a wallet and remove todo comment

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] update the temporarily_locked error message to show it as suggested in the jira card requirements

Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

* [INJIWEB-1627] make changes in solid button component to not to show hovering effect to the submit button in passcode page when it is in disabled state and resolve the onClick warning coming in solidButton and extract styles of it into separate file

Signe

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "يجب أن يكون الرقم السري 6 أرقام.",
       "passcodeMismatchError": "رمزا المرور غير متطابقين. يُرجى التأكد من تطابق حقلي رمز المرور تمامًا. أعد إدخالهما وحاول مجددًا.",
       "createWalletError": "فشل إنشاء المحفظة.",
-      "incorrectPasscodeError": "رمز المرور غير صالح. رمز المرور الذي أدخلته غير صحيح. يُرجى التحقق والمحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" لإعادة تعيينه.",
-      "fetchWalletsError": "فشل في جلب المحافظ."
+      "incorrectPasscodeError": "يبدو أن رمز المرور غير صحيح. يُرجى المحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" إذا كنت بحاجة إلى مساعدة في إعادة ضبطه.",
+      "fetchWalletsError": "فشل في جلب المحافظ.",
+      "walletStatus": {
+        "temporarily_locked": "لقد وصلتَ إلى الحد الأقصى لعدد المحاولات. محفظتك الآن مقفلة مؤقتًا. يُرجى المحاولة لاحقًا.",
+        "permanently_locked": "تم قفل محفظتك نهائيًا بسبب عدة محاولات فاشلة. يُرجى النقر على \"نسيت كلمة المرور\" لإعادة ضبط محفظتك والمتابعة.",
+        "last_attempt_before_lockout": "رمز المرور غير صحيح. آخر محاولة متبقية قبل قفل محفظتك نهائيًا."
+      }
     }
   },
   "ResetPasscodePage": {
@@ -419,6 +424,29 @@
       "placeholder": "ابحث عن بطاقاتك حسب الاسم",
       "noResults": "لا توجد بطاقات تطابق بحثك."
     },
+    "cardView": {
+      "download": "تنزيل",
+      "menu": {
+        "view": "عرض",
+        "delete": "حذف"
+      },
+      "error": {
+        "downloadError": "فشل التنزيل. يرجى إعادة المحاولة.",
+        "deleteError": "فشل الحذف. حاول مرة أخرى."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "حذف البطاقة!",
+          "message": "هل أنت متأكد أنك تريد حذف هذه البطاقة؟"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "بيت",
+    "goToHome": "الذهاب إلى الصفحة الرئيسية",
+    "confirm": "تأكيد",
+    "cancel": "إلغاء",
     "error": {
       "internalServerError": {
         "title": "خطأ في الخادم",
@@ -444,29 +472,6 @@
         "title": "لا يوجد اتصال بالإنترنت",
         "message": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى."
       }
-    },
-    "cardView": {
-      "download": "تنزيل",
-      "menu": {
-        "view": "عرض",
-        "delete": "حذف"
-      },
-      "error": {
-        "downloadError": "فشل التنزيل. يرجى إعادة المحاولة.",
-        "deleteError": "فشل الحذف. حاول مرة أخرى."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "حذف البطاقة!",
-          "message": "هل أنت متأكد أنك تريد حذف هذه البطاقة؟"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "بيت",
-    "goToHome": "الذهاب إلى الصفحة الرئيسية",
-    "confirm": "تأكيد",
-    "cancel": "إلغاء"
   }
 }
