--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "पिन 6 अंकों का होना चाहिए।",
       "passcodeMismatchError": "पासकोड मेल नहीं खाते। कृपया सुनिश्चित करें कि दोनों पासकोड फ़ील्ड बिल्कुल मेल खाते हैं। पुनः दर्ज करें और पुनः प्रयास करें।",
       "createWalletError": "वॉलेट निर्माण असफल हुआ।",
-      "incorrectPasscodeError": "अमान्य पासकोड। आपके द्वारा दर्ज किया गया पासकोड गलत है। कृपया जाँचें और पुनः प्रयास करें, या इसे रीसेट करने के लिए 'पासकोड भूल गए' पर क्लिक करें।",
-      "fetchWalletsError": "वॉलेट लाने में त्रुटि।"
+      "incorrectPasscodeError": "पासकोड सही नहीं लग रहा है। कृपया पुनः प्रयास करें, या यदि आपको इसे रीसेट करने में सहायता चाहिए, तो 'पासकोड भूल गए' पर टैप करें।",
+      "fetchWalletsError": "वॉलेट लाने में त्रुटि।",
+      "walletStatus": {
+        "temporarily_locked": "आप अधिकतम प्रयासों तक पहुँच चुके हैं। आपका वॉलेट अब अस्थायी रूप से लॉक हो गया है। कृपया बाद में पुनः प्रयास करें",
+        "permanently_locked": "कई असफल प्रयासों के कारण आपका वॉलेट स्थायी रूप से लॉक कर दिया गया है। कृपया जारी रखने के लिए अपना वॉलेट रीसेट करने के लिए पासवर्ड भूल गए पर क्लिक करें",
+        "last_attempt_before_lockout": "गलत पासकोड। आपका वॉलेट स्थायी रूप से लॉक होने से पहले बचा हुआ अंतिम प्रयास"
+      }
     }
   },
   "ResetPasscodePage": {
@@ -419,6 +424,29 @@
       "placeholder": "नाम से अपने कार्ड खोजें",
       "noResults": "आपकी खोज से मेल खाने वाला कोई कार्ड नहीं है।"
     },
+    "cardView": {
+      "download": "डाउनलोड करें",
+      "menu": {
+        "view": "देखें",
+        "delete": "हटाएँ"
+      },
+      "error": {
+        "downloadError": "डाउनलोड विफल। कृपया पुनः प्रयास करें।",
+        "deleteError": "हटाने में विफल। पुनः प्रयास करें।"
+      },
+      "delete": {
+        "confirmation": {
+          "title": "कार्ड हटाएँ!",
+          "message": "क्या आप वाकई इस कार्ड को हटाना चाहते हैं?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "घर",
+    "goToHome": "होम पर जाएं",
+    "confirm": "पुष्टि करें",
+    "cancel": "रद्द करें",
     "error": {
       "internalServerError": {
         "title": "सर्वर त्रुटि",
@@ -444,29 +472,6 @@
         "title": "कोई इंटरनेट कनेक्शन नहीं",
         "message": "कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें।"
       }
-    },
-    "cardView": {
-      "download": "डाउनलोड करें",
-      "menu": {
-        "view": "देखें",
-        "delete": "हटाएँ"
-      },
-      "error": {
-        "downloadError": "डाउनलोड विफल। कृपया पुनः प्रयास करें।",
-        "deleteError": "हटाने में विफल। पुनः प्रयास करें।"
-      },
-      "delete": {
-        "confirmation": {
-          "title": "कार्ड हटाएँ!",
-          "message": "क्या आप वाकई इस कार्ड को हटाना चाहते हैं?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "घर",
-    "goToHome": "होम पर जाएं",
-    "confirm": "पुष्टि करें",
-    "cancel": "रद्द करें"
   }
 }
