--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
       "passcodeMismatchError": "ಪಾಸ್‌ಕೋಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ. ಎರಡೂ ಪಾಸ್‌ಕೋಡ್ ಕ್ಷೇತ್ರಗಳು ನಿಖರವಾಗಿ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. ಮರು-ನಮೂದಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "createWalletError": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
-      "incorrectPasscodeError": "ಅಮಾನ್ಯ ಪಾಸ್‌ಕೋಡ್. ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ಕೋಡ್ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿರಾ' ಕ್ಲಿಕ್ ಮಾಡಿ.",
-      "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ."
+      "incorrectPasscodeError": "ಪಾಸ್‌ಕೋಡ್ ಸರಿಯಾಗಿಲ್ಲ ಎಂದು ತೋರುತ್ತದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮಗೆ ಸಹಾಯ ಬೇಕಾದರೆ 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ' ಟ್ಯಾಪ್ ಮಾಡಿ.",
+      "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ.",
+      "walletStatus": {
+        "temporarily_locked": "ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಪ್ರಯತ್ನಗಳನ್ನು ತಲುಪಿದ್ದೀರಿ. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಈಗ ತಾತ್ಕಾಲಿಕವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+        "permanently_locked": "ಹಲವಾರು ವಿಫಲ ಪ್ರಯತ್ನಗಳಿಂದಾಗಿ ನಿಮ್ಮ ವಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ಮುಂದುವರಿಯಲು ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಲು ದಯವಿಟ್ಟು ಮರೆತುಹೋದ ಪಾಸ್‌ವರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ.",
+        "last_attempt_before_lockout": "ತಪ್ಪಾದ ಪಾಸ್‌ಕೋಡ್. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗುವ ಮೊದಲು ಕೊನೆಯ ಪ್ರಯತ್ನ ಉಳಿದಿದೆ."
+      }
     }
   },
   "ResetPasscodePage": {
@@ -420,6 +425,29 @@
       "placeholder": "ಹೆಸರಿನ ಮೂಲಕ ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಹುಡುಕಿ",
       "noResults": "ನಿಮ್ಮ ಹುಡುಕಾಟಕ್ಕೆ ಯಾವುದೇ ಕಾರ್ಡುಗಳು ಹೊಂದಿಕೆಯಾಗುವುದಿಲ್ಲ."
     },
+    "cardView": {
+      "download": "ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ",
+      "menu": {
+        "view": "ನೋಡಿ",
+        "delete": "ಅಳಿಸಿ"
+      },
+      "error": {
+        "downloadError": "ಡೌನ್‌ಲೋಡ್ ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+        "deleteError": "ಅಳಿಸಲು ವಿಫಲವಾಗಿದೆ. ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "ಕಾರ್ಡ್ ಅಳಿಸಿ!",
+          "message": "ನೀವು ನಿಜವಾಗಿಯೂ ಈ ಕಾರ್ಡ್ ಅನ್ನು ಅಳಿಸಲು ಬಯಸುವಿರಾ?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "ಮನೆ",
+    "goToHome": "ಮನೆಗೆ ಹೋಗಿ",
+    "confirm": "ದೃಢೀಕರಿಸಿ",
+    "cancel": "ರದ್ದುಮಾಡಿ",
     "error": {
       "internalServerError": {
         "title": "ಸರ್ವರ್ ದೋಷ",
@@ -445,29 +473,6 @@
         "title": "ಇಂಟರ್ನೆಟ್ ಸಂಪರ್ಕವಿಲ್ಲ",
         "message": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಇಂಟರ್ನೆಟ್ ಸಂಪರ್ಕವನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
       }
-    },
-    "cardView": {
-      "download": "ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ",
-      "menu": {
-        "view": "ನೋಡಿ",
-        "delete": "ಅಳಿಸಿ"
-      },
-      "error": {
-        "downloadError": "ಡೌನ್‌ಲೋಡ್ ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
-        "deleteError": "ಅಳಿಸಲು ವಿಫಲವಾಗಿದೆ. ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "ಕಾರ್ಡ್ ಅಳಿಸಿ!",
-          "message": "ನೀವು ನಿಜವಾಗಿಯೂ ಈ ಕಾರ್ಡ್ ಅನ್ನು ಅಳಿಸಲು ಬಯಸುವಿರಾ?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "ಮನೆ",
-    "goToHome": "ಮನೆಗೆ ಹೋಗಿ",
-    "confirm": "ದೃಢೀಕರಿಸಿ",
-    "cancel": "ರದ್ದುಮಾಡಿ"
   }
 }
