--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -98,8 +98,13 @@
       "passcodeLengthError":"Please Enter 6 digits in the Pin",
       "passcodeMismatchError":"Passcodes do not match. Please ensure both passcode fields match exactly. Re-enter and try again.",
       "createWalletError":"Wallet creation unsuccessful",
-      "incorrectPasscodeError":"Invalid Passcode. The passcode you entered is incorrect. Please check and try again, or click 'Forgot Passcode' to reset it.",
-      "fetchWalletsError":"Error in fetching wallets"
+      "incorrectPasscodeError":"The passcode doesn’t seem right. Please try again, or tap ‘Forgot Passcode’ if you need help resetting it",
+      "fetchWalletsError":"Error in fetching wallets",
+      "walletStatus": {
+        "temporarily_locked": "You've reached the maximum number of attempts. Your wallet is now temporarily locked. Please try again later",
+        "permanently_locked": "Your wallet has been permanently locked due to multiple failed attempts. Please click on forgot password to reset your wallet to continue",
+        "last_attempt_before_lockout": "Incorrect passcode. Last attempt remaining before your wallet is permanently locked"
+      }
     }
   },
   "ResetPasscodePage": {
@@ -419,6 +424,29 @@
       "placeholder": "Search your cards by Name",
       "noResults": "No cards match your search."
     },
+    "cardView": {
+      "download": "Download",
+      "menu": {
+        "view": "View",
+        "delete": "Delete"
+      },
+      "error": {
+        "downloadError": "Download failed. Please retry.",
+        "deleteError": "Failed to delete. Try again."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "Delete Card!",
+          "message": "Are you sure you want to delete this card?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "Home",
+    "goToHome": "Go to Home",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
     "error": {
       "internalServerError": {
         "title": "Server Error",
@@ -444,29 +472,6 @@
         "title": "No Internet Connection",
         "message": "Please check your internet connection and try again."
       }
-    },
-    "cardView": {
-      "download": "Download",
-      "menu": {
-        "view": "View",
-        "delete": "Delete"
-      },
-      "error": {
-        "downloadError": "Download failed. Please retry.",
-        "deleteError": "Failed to delete. Try again."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "Delete Card!",
-          "message": "Are you sure you want to delete this card?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "Home",
-    "goToHome": "Go to Home",
-    "confirm": "Confirm",
-    "cancel": "Cancel"
   }
 }
