--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
       "passcodeMismatchError": "கடவுக்குறியீடுகள் பொருந்தவில்லை. இரண்டு கடவுக்குறியீடு புலங்களும் சரியாகப் பொருந்துவதை உறுதிசெய்து கொள்ளவும். மீண்டும் உள்ளிட்டு மீண்டும் முயற்சிக்கவும்.",
       "createWalletError": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
-      "incorrectPasscodeError": "தவறான கடவுக்குறியீடு. நீங்கள் உள்ளிட்ட கடவுக்குறியீடு தவறானது. சரிபார்த்து மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க 'கடவுக்குறியீட்டை மறந்துவிட்டீர்களா' என்பதைக் கிளிக் செய்யவும்.",
-      "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது."
+      "incorrectPasscodeError": "கடவுக்குறியீடு சரியாக இல்லை. மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க உதவி தேவைப்பட்டால் ‘கடவுக்குறியீட்டை மறந்துவிட்டேன்’ என்பதைத் தட்டவும்.",
+      "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது.",
+      "walletStatus": {
+        "temporarily_locked": "நீங்கள் அதிகபட்ச முயற்சிகளை அடைந்துவிட்டீர்கள். உங்கள் பணப்பை இப்போது தற்காலிகமாக பூட்டப்பட்டுள்ளது. தயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும்.",
+        "permanently_locked": "பலமுறை முயற்சித்து தோல்வியடைந்ததால் உங்கள் பணப்பை நிரந்தரமாக பூட்டப்பட்டுள்ளது. தொடர உங்கள் பணப்பையை மீட்டமைக்க மறந்துவிட்ட கடவுச்சொல்லைக் கிளிக் செய்யவும்.",
+        "last_attempt_before_lockout": "தவறான கடவுக்குறியீடு. உங்கள் பணப்பை நிரந்தரமாகப் பூட்டப்படுவதற்கு முன் கடைசி முயற்சி மீதமுள்ளது."
+      }
     }
   },
   "ResetPasscodePage": {
@@ -419,6 +424,29 @@
       "placeholder": "உங்கள் அட்டைகளை பெயர் மூலம் தேடுங்கள்",
       "noResults": "உங்கள் தேடலுக்கு எந்த அட்டைகளும் பொருந்தவில்லை."
     },
+    "cardView": {
+      "download": "பதிவிறக்கம்",
+      "menu": {
+        "view": "காண்க",
+        "delete": "நீக்கு"
+      },
+      "error": {
+        "downloadError": "பதிவிறக்கம் தோல்வியடைந்தது. மீண்டும் முயற்சிக்கவும்.",
+        "deleteError": "நீக்குவதில் தோல்வி. மீண்டும் முயற்சிக்கவும்."
+      },
+      "delete": {
+        "confirmation": {
+          "title": "அட்டையை நீக்கு!",
+          "message": "இந்த அட்டையை நீக்க விரும்புகிறீர்களா?"
+        }
+      }
+    }
+  },
+  "Common": {
+    "home": "முகப்பு",
+    "goToHome": "முகப்புக்குச் செல்க",
+    "confirm": "உறுதிப்படுத்து",
+    "cancel": "ரத்து செய்",
     "error": {
       "internalServerError": {
         "title": "சர்வர் பிழை",
@@ -444,29 +472,6 @@
         "title": "இணைய இணைப்பு இல்லை",
         "message": "உங்கள் இணைய இணைப்பை சரிபார்த்து மீண்டும் முயற்சிக்கவும்."
       }
-    },
-    "cardView": {
-      "download": "பதிவிறக்கம்",
-      "menu": {
-        "view": "காண்க",
-        "delete": "நீக்கு"
-      },
-      "error": {
-        "downloadError": "பதிவிறக்கம் தோல்வியடைந்தது. மீண்டும் முயற்சிக்கவும்.",
-        "deleteError": "நீக்குவதில் தோல்வி. மீண்டும் முயற்சிக்கவும்."
-      },
-      "delete": {
-        "confirmation": {
-          "title": "அட்டையை நீக்கு!",
-          "message": "இந்த அட்டையை நீக்க விரும்புகிறீர்களா?"
-        }
-      }
     }
-  },
-  "Common": {
-    "home": "முகப்பு",
-    "goToHome": "முகப்புக்குச் செல்க",
-    "confirm": "உறுதிப்படுத்து",
-    "cancel": "ரத்து செய்"
   }
 }
