injiweb-1608 used locale and added test cases for regex
Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -146,7 +146,11 @@
     "emptyContainerContent": "لم يتم العثور على جهات الإصدار. ",
     "containerHeading": "قائمة المصدرين",
     "containerSubHeading": "ابحث عن جهة الإصدار الموثوق بها واختر نوع بيانات الاعتماد في الخطوة التالية.",
-    "errorContent": "الخدمة غير متاحة حالياً. "
+    "errorContent": "الخدمة غير متاحة حالياً. ",
+    "searchIssuerHelpText": {
+      "default": "ابحث حسب اسم المُصدر باستخدام الحروف أو الأرقام أو المسافات أو الواصلات أو الأقواس فقط.",
+      "error": "الرجاء إدخال اسم جهة الإصدار صالحًا. يُسمح فقط بالأحرف والأرقام والمسافات والواصلات (-) والشرطات السفلية (_) والأقواس ( ). لا يسمح باستخدام الأحرف الخاصة."
+    }
   },
   "CredentialsPage": {
     "searchText": "بحث عن نوع بيانات الاعتماد",
