--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -147,9 +147,11 @@
     "containerHeading": "قائمة المصدرين",
     "containerSubHeading": "ابحث عن جهة الإصدار الموثوق بها واختر نوع بيانات الاعتماد في الخطوة التالية.",
     "errorContent": "الخدمة غير متاحة حالياً. ",
-    "searchIssuerHelpText": {
-      "default": "ابحث حسب اسم المُصدر باستخدام الحروف أو الأرقام أو المسافات أو الواصلات أو الأقواس فقط.",
-      "error": "الرجاء إدخال اسم جهة الإصدار صالحًا. يُسمح فقط بالأحرف والأرقام والمسافات والواصلات (-) والشرطات السفلية (_) والأقواس ( ). لا يسمح باستخدام الأحرف الخاصة."
+    "searchIssuer": {
+      "helpText": {
+        "info": "ابحث حسب اسم المُصدر باستخدام الحروف أو الأرقام أو الواصلات (-) أو الشرطات السفلية (_) أو الأقواس ( ) فقط.",
+        "error": "الرجاء إدخال اسم جهة الإصدار صالحًا. يُسمح فقط بالأحرف والأرقام والمسافات والواصلات (-) والشرطات السفلية (_) والأقواس ( ). لا يسمح باستخدام الأحرف الخاصة."
+      }
     }
   },
   "CredentialsPage": {
