--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -147,9 +147,11 @@
     "containerHeading": "List of Issuers",
     "containerSubHeading": "Search for your trusted issuer and choose a credential type in the next step.",
     "errorContent": "The service is currently unavailable now. Please try again later.",
-    "searchIssuerHelpText": {
-      "default": "Search by issuer name using letters, numbers, spaces, hyphens, or parentheses only.",
-      "error": "Please enter a valid issuer name. Only letters, numbers, spaces, hyphens (-), underscores (_), and brackets ( ) are allowed. Special characters are not permitted."
+    "searchIssuer": {
+      "helpText": {
+        "info": "Search by issuer name using letters, numbers, hyphens (-), underscores (_) or brackets ( ) only.",
+        "error": "Please enter a valid issuer name. Only letters, numbers, spaces, hyphens (-), underscores (_), and brackets ( ) are allowed. Special characters are not permitted."
+      }
     }
   },
   "CredentialsPage": {
