--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -147,9 +147,11 @@
     "containerHeading": "Lista de emissores",
     "containerSubHeading": "Pesquise seu emissor confiável e escolha um tipo de credencial na próxima etapa.",
     "errorContent": "O serviço não está disponível no momento. Tente novamente mais tarde.",
-    "searchIssuerHelpText": {
-      "default": "Pesquise pelo nome do emissor usando apenas letras, números, espaços, hífens ou parênteses.",
-      "error": "Insira um nome de emissor válido. Somente letras, números, espaços, hífens (-), sublinhados (_) e colchetes ( ) são permitidos. Caracteres especiais não são permitidos."
+    "searchIssuer": {
+      "helpText": {
+        "info": "Pesquise pelo nome do emissor usando apenas letras, números, hífens (-), sublinhados (_) ou colchetes ( ).",
+        "error": "Insira um nome de emissor válido. Somente letras, números, espaços, hífens (-), sublinhados (_) e colchetes ( ) são permitidos. Caracteres especiais não são permitidos."
+      }
     }
   },
   "CredentialsPage": {
